[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/replay-24px.png" type="Texture" id=1]
[ext_resource path="res://art/vertical_align_bottom-24px.png" type="Texture" id=2]
[ext_resource path="res://font/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/check_circle_outline-24px.png" type="Texture" id=4]
[ext_resource path="res://art/error_outline-24px.png" type="Texture" id=5]
[ext_resource path="res://art/highlight_off-24px.png" type="Texture" id=6]
[ext_resource path="res://pad_ui/PackDownloadListItem.gd" type="Script" id=7]
[ext_resource path="res://art/delete_outline-24px.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.254902, 0.890196, 1, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="Node" type="Node2D"]
position = Vector2( 0, -100 )
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 37.0
margin_top = 463.753
margin_right = 498.0
margin_bottom = 475.753
custom_styles/fg = SubResource( 1 )
max_value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressText" type="Label" parent="."]
visible = false
margin_left = 41.473
margin_top = 442.201
margin_right = 307.473
margin_bottom = 483.201
custom_fonts/font = SubResource( 2 )
text = "-MB/-MB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerminalStateText" type="Label" parent="."]
visible = false
margin_left = 41.473
margin_top = 451.201
margin_right = 307.473
margin_bottom = 492.201
custom_fonts/font = SubResource( 2 )
text = "    Download Completed "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PackName" type="Label" parent="."]
margin_left = 39.0
margin_top = 406.0
margin_right = 471.0
margin_bottom = 447.0
custom_fonts/font = SubResource( 3 )
text = "Awesome DLC 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="TextureButton" parent="."]
visible = false
margin_left = 438.285
margin_top = 404.699
margin_right = 866.285
margin_bottom = 832.699
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="TextureButton" parent="."]
visible = false
margin_left = 441.285
margin_top = 414.323
margin_right = 783.285
margin_bottom = 841.323
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadButton" type="TextureButton" parent="."]
visible = false
margin_left = 443.002
margin_top = 420.929
margin_right = 785.002
margin_bottom = 804.929
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="TextureButton" parent="."]
visible = false
margin_left = 447.285
margin_top = 417.628
margin_right = 747.285
margin_bottom = 801.628
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CompletedIcon" type="TextureButton" parent="."]
visible = false
margin_left = 41.4676
margin_top = 453.656
margin_right = 469.468
margin_bottom = 881.656
rect_scale = Vector2( 0.03, 0.03 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorIcon" type="TextureButton" parent="."]
visible = false
margin_left = 41.4676
margin_top = 453.656
margin_right = 469.468
margin_bottom = 881.656
rect_scale = Vector2( 0.03, 0.03 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="DownloadButton" to="." method="_on_download_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
